k8s/deployment.yml
# na árvore, deployment vem primeiro para cuidar de replicasets e replicasets gerencia as réplicas de pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 10
  template:
    metadata:
      name: goserver
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: "leonardo/hello-go:latest"
        imagePullPolicy: IfNotPresent
