k8s/mysql-service-h.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - port: 3306
  clusterIP: None
